WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118433
AX: iOS: SVG paths are not offset by the parent bounding box
https://bugs.webkit.org/show_bug.cgi?id=118433
Summary
AX: iOS: SVG paths are not offset by the parent bounding box
chris fleizach
Reported
2013-07-05 15:07:17 PDT
Asking for an SVG path will give it to you in the parent's view space. To correctly display on screen that needs to be offset by the parent's location within the web view
Attachments
patch
(1.92 KB, patch)
2013-07-05 15:56 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(2.08 KB, patch)
2013-07-05 15:59 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2013-07-05 15:56:40 PDT
Created
attachment 206174
[details]
patch
chris fleizach
Comment 2
2013-07-05 15:59:45 PDT
Created
attachment 206175
[details]
patch
Sam Weinig
Comment 3
2013-07-05 21:26:01 PDT
Any way to test this?
chris fleizach
Comment 4
2013-07-05 22:55:58 PDT
(In reply to
comment #3
)
> Any way to test this?
I originally had the path data output point information, but it changed from on each build bot, so I had to remove the point location information. There's not a great way to test for this unfortunately that's reliable
Tim Horton
Comment 5
2013-07-08 13:35:49 PDT
Comment on
attachment 206175
[details]
patch Does this work for nested <svg>?
Tim Horton
Comment 6
2013-07-08 13:36:18 PDT
(In reply to
comment #4
)
> (In reply to
comment #3
) > > Any way to test this? > > I originally had the path data output point information, but it changed from on each build bot, so I had to remove the point location information. There's not a great way to test for this unfortunately that's reliable
This seems ... surprising.
chris fleizach
Comment 7
2013-07-08 13:42:16 PDT
(In reply to
comment #5
)
> (From update of
attachment 206175
[details]
) > Does this work for nested <svg>?
I'll have to check
WebKit Commit Bot
Comment 8
2013-07-08 14:04:44 PDT
Comment on
attachment 206175
[details]
patch Clearing flags on attachment: 206175 Committed
r152464
: <
http://trac.webkit.org/changeset/152464
>
WebKit Commit Bot
Comment 9
2013-07-08 14:04:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug