AX: iOS: SVG paths are not offset by the parent bounding box https://bugs.webkit.org/show_bug.cgi?id=118433

The path for SVG shapes is in terms of its parent's view space. We need to offset
the path by that amount so that it's in the right location.

Reviewed by Tim Horton.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::elementPath):


Canonical link: https://commits.webkit.org/136450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152464 268f45cc-cd09-0410-ab3c-d52691b4dbfc