Source/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -852,12 +852,24 @@ bool AccessibilityRenderObject::supportsPath() const
     
     return false;
 }
-    
+
 Path AccessibilityRenderObject::elementPath() const
 {
 #if ENABLE(SVG)
-    if (m_renderer && m_renderer->isSVGShape() && toRenderSVGShape(m_renderer)->hasPath())
-        return toRenderSVGShape(m_renderer)->path();
+    if (m_renderer && m_renderer->isSVGShape() && toRenderSVGShape(m_renderer)->hasPath()) {
+        Path path = toRenderSVGShape(m_renderer)->path();
+        
+        // The SVG path is in terms of the parent's bounding box. The path needs to be offset to frame coordinates.
+        for (RenderObject* parent = m_renderer->parent(); parent; parent = parent->parent()) {
+            if (parent->isSVGRoot()) {
+                LayoutPoint parentOffset = axObjectCache()->getOrCreate(parent)->elementRect().location();
+                path.transform(AffineTransform().translate(parentOffset.x(), parentOffset.y()));
+                break;
+            }
+        }
+        
+        return path;
+    }
 #endif
     
     return Path();
